--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 Youdao Note API Python SDK
 
-This code is a pure Python interface to Youdao Note API which provides OAuth2.0 authentication and API calling wrapper.
+This package is a pure Python interface to Youdao Note API which provides OAuth2.0 authentication and API calling wrapper.
 
 Developed and mantained by Daniel Lee. Please feel free to report bugs and your suggestions at:
 
